--- a/src/main/resources/templates/todo.html
+++ b/src/main/resources/templates/todo.html
@@ -33,7 +33,7 @@
 
     </style>
 </head>
-<body class="bg-gray-300">
+<body class="bg-gray-300" hx-ext="reset-on-success">
 
 <div class="mt-14 max-w-md mx-auto p-5 border-red-800 border bg-yellow-50">
 
@@ -45,42 +45,44 @@
         <div class="header">
             <div class="search-filter my-4">
                 <span class="mr-2">Filter: </span>
-                <form action="">
-                    <div class="mr-2 inline-block">
-                        <input id="filter-all" name="filter-type" type="radio" value="all" onchange="submit()">
-                        <label for="filter-all" class="text-base">ALL</label>
-                    </div>
-                    <div class="inline-block">
-                        <input id="filter-unfinished" name="filter-type" type="radio" value="unfinished" onchange="submit()">
-                        <label for="filter-unfinished" class="text-base">UNFINISHED</label>
-                    </div>
-                </form>
+                <div class="mr-2 inline-block">
+                    <input id="filter-all" name="filter-type" type="radio" value="all">
+                    <label for="filter-all" class="text-base">ALL</label>
+                </div>
+                <div class="inline-block">
+                    <input id="filter-unfinished" name="filter-type" type="radio" value="unfinished">
+                    <label for="filter-unfinished" class="text-base">UNFINISHED</label>
+                </div>
             </div>
             <div class="search-control">
-                <form action="" method="POST">
-                    <label for="search-input" class="hidden">TODO</label>
-                    <input id="search-input" name="todo" class="w-full" placeholder="Add some todos" type="text">
-                </form>
+                <input type="hidden" name="type" th:value="${#lists.isEmpty(items)}">
+                <input th:replace="~{fragments/biz/search-input :: search_input_on_empty}" th:if="${#lists.isEmpty(items)}">
+                <input th:replace="~{fragments/biz/search-input :: search_input_on_present}" th:unless="${#lists.isEmpty(items)}">
             </div>
         </div>
+
         <div class="body mt-6">
-            <h2 class="pl-2.5 bg-white border-gray-300 border text-center text-red-900 font-bold py-4 mb-2"
+            <h2 id="todos-empty"
+                class="pl-2.5 bg-white border-gray-300 border text-center text-red-900 font-bold py-4 mb-2"
+                th:attr="hx-trigger='item-refresh from:body',hx-get=@{/todos},hx-swap='outerHTML'"
                 th:if="${#lists.isEmpty(items)}">Empty Todos</h2>
-            <ul class="py-2" th:each="item : ${items}" th:unless="${#lists.isEmpty(items)}">
-                <li th:replace="~{fragments/biz/todo-item :: todoItem(${item.id}, ${item.task}, ${item.done})}"></li>
+
+            <ul id="todos-container" class="py-2" th:unless="${#lists.isEmpty(items)}">
+                <li class="flex py-2" th:each="item : ${items}">
+                    <div th:replace="~{/fragments/biz/todo-item :: todoItem(${item.id}, ${item.task}, ${item.done})}"></div>
+                </li>
             </ul>
         </div>
+
         <div class="footer">
             <div class="flex mt-2">
                 <span class="grow leading-loose summary" th:text="|there is ${items.size()} items|"></span>
-                <form th:action="@{/todos/clear-all}" method="post">
-                    <button th:replace="~{fragments/control/main :: btn('Clear All Finished', ~{:: .clear_all})}">
-                        <svg class="clear_all mr-1 w-6 h-6" fill="#771D1DFF" xmlns="http://www.w3.org/2000/svg"
-                             viewBox="0 0 24 24"><title>close-box-multiple</title>
-                            <path d="M4 20H18V22H4C2.9 22 2 21.11 2 20V6H4V20M20.22 2H7.78C6.8 2 6 2.8 6 3.78V16.22C6 17.2 6.8 18 7.78 18H20.22C21.2 18 22 17.2 22 16.22V3.78C22 2.8 21.2 2 20.22 2M19 13.6L17.6 15L14 11.4L10.4 15L9 13.6L12.6 10L9 6.4L10.4 5L14 8.6L17.6 5L19 6.4L15.4 10L19 13.6Z"/>
-                        </svg>
-                    </button>
-                </form>
+                <button th:replace="~{fragments/control/main :: btn('Clear All Finished', ~{:: .clear_all}, 'a=1')}">
+                    <svg class="clear_all mr-1 w-6 h-6" fill="#771D1DFF" xmlns="http://www.w3.org/2000/svg"
+                         viewBox="0 0 24 24"><title>close-box-multiple</title>
+                        <path d="M4 20H18V22H4C2.9 22 2 21.11 2 20V6H4V20M20.22 2H7.78C6.8 2 6 2.8 6 3.78V16.22C6 17.2 6.8 18 7.78 18H20.22C21.2 18 22 17.2 22 16.22V3.78C22 2.8 21.2 2 20.22 2M19 13.6L17.6 15L14 11.4L10.4 15L9 13.6L12.6 10L9 6.4L10.4 5L14 8.6L17.6 5L19 6.4L15.4 10L19 13.6Z"/>
+                    </svg>
+                </button>
             </div>
         </div>
     </div>
