--- a/src/main/resources/templates/layout/general.html
+++ b/src/main/resources/templates/layout/general.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title th:replace="${title}"></title>
+    <link rel="stylesheet" th:href="@{/css/mask.css}">
     <link rel="stylesheet" th:href="@{/css/tailwind.css}">
     <link rel="stylesheet" th:href="@{/css/flowbite.min.css}">
     <script type="text/javascript" th:src="@{/js/flowbite.js}"></script>
